@@ -2,16 +2,21 @@
 
 package org.hiero.mirror.importer.downloader.block;
 
+import static org.hiero.mirror.importer.downloader.block.BlockNodeProperties.FULL_BLOCK_NODE_APIS;
+
+import jakarta.annotation.PostConstruct;
 import jakarta.validation.Valid;
+import jakarta.validation.constraints.AssertTrue;
 import jakarta.validation.constraints.NotNull;
 import java.nio.file.Path;
 import java.time.Duration;
-import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
+import java.util.stream.Collectors;
 import lombok.Data;
 import org.apache.commons.lang3.StringUtils;
 import org.hiero.mirror.common.domain.transaction.BlockSourceType;
 import org.hiero.mirror.importer.ImporterProperties;
+import org.hiero.mirror.importer.domain.StreamFileData;
 import org.springframework.boot.context.properties.ConfigurationProperties;
 import org.springframework.stereotype.Component;
 import org.springframework.validation.annotation.Validated;
@@ -31,13 +36,12 @@ public final class BlockProperties {
     private boolean enabled = false;
 
     @NotNull
-    private Duration frequency = Duration.ofMillis(100L);
+    private Duration frequency = Duration.ofMillis(500L);
 
     private Path initialLedgerIdPublication;
 
     @NotNull
-    @Valid
-    private Collection<BlockNodeProperties> nodes = Collections.emptyList();
+    private List<@Valid BlockNodeProperties> nodes = List.of();
 
     private boolean persistBytes = false;
 
@@ -50,9 +54,22 @@ public final class BlockProperties {
 
     private boolean writeFiles = false;
 
+    @PostConstruct
+    void init() {
+        StreamFileData.setMaxDecompressedBytes(stream.getMaxBlockSize().toBytes());
+    }
+
     public String getBucketName() {
         return StringUtils.isNotBlank(bucketName)
                 ? bucketName
                 : ImporterProperties.HederaNetwork.getBlockStreamBucketName(importerProperties.getNetwork());
+    }
+
+    @AssertTrue(message = "Each node must contain both STATUS and SUBSCRIBE_STREAM capable endpoints")
+    private boolean hasValidEndpoints() {
+        return nodes.stream().allMatch(n -> n.getEndpoints().stream()
+                .flatMap(e -> e.getApis().stream())
+                .collect(Collectors.toSet())
+                .containsAll(FULL_BLOCK_NODE_APIS));
     }
 }
